--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-sync-query",
-  "version": "1.0.0",
+  "name": "vue-sync-data",
+  "version": "1.0.0@beta0.0.1",
   "description": "Auto Sync Vue Data to Query String",
   "main": "vue-sync-query.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "sync",
     "query"
   ],
-  "author": "jackovsky888",
+  "author": "jackovsky8",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.3.4",
