--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "vue-sync-data",
   "version": "1.0.0-beta0.0.1",
   "description": "Auto Sync Vue Data to Query String",
-  "main": "vue-sync-query.js",
+  "main": "dist/vue-sync-data.cjs.js",
+  "module": "dist/vue-sync-data.esm.js",
+  "browser": "dist/vue-sync-data.umd.js",
   "scripts": {
     "test": "npm run build && xo src/**/* && karma start",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "lint": "eslint --fix --ext .js --ignore-path .eslintignore ."
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jackovsky888/vue-sync-query"
+    "url": "https://github.com/jackovsky8/vue-sync-data"
   },
   "keywords": [
     "vue",
@@ -23,14 +29,13 @@
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "eslint": "^5.15.2",
+    "lodash-es": "^4.17.11",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-uglify": "^6.0.2"
-  },
-  "dependencies": {
-    "lodash": "^4.17.11"
+    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-node-resolve": "^4.0.1"
   }
 }
