--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "eslint": "^5.15.2",
-    "lodash-es": "^4.17.11",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-node-resolve": "^4.0.1"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.11"
   }
 }
