--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "test": "npm run build && xo src/**/* && karma start",
     "build": "rollup -c",
+    "dev": "rollup -c --watch",
     "lint": "eslint --fix --ext .js --ignore-path .eslintignore ."
   },
   "files": [
@@ -29,7 +30,8 @@
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
-    "eslint": "^5.15.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint": "^5.15.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-babel-minify": "^8.0.0",
@@ -38,6 +40,6 @@
     "rollup-plugin-node-resolve": "^4.0.1"
   },
   "dependencies": {
-    "lodash-es": "^4.17.11"
+    "lodash": "^4.17.11"
   }
 }
