--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
     "concurrently": "^4.1.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.3",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-vue": "^5.2.2",
     "jest": "^24.5.0",
     "rollup": "^1.7.0",
     "rollup-plugin-babel": "^4.3.2",
